@@ -278,8 +278,7 @@ class UserGroup extends Base {
                     isset($lineConfig['uid']) &&
                     isset($lineConfig['file'])
                 ) {
-                    $sanitizer = GeneralUtility::makeInstance(\TYPO3\CMS\Frontend\Resource\FilePathSanitizer::class);
-                    $dataFilename = $sanitizer->sanitize($lineConfig['file']);
+                    $dataFilename = $lineConfig['file'];
                     $absFilename = GeneralUtility::getFileAbsFileName($dataFilename);
                     $handle = fopen($absFilename, 'rt');
                     if ($handle === false) {
